Refactor html file location

--- a/front-end/public/html/books.html
+++ b/front-end/public/html/books.html
@@ -9,7 +9,7 @@
     <div class="container">
       <h3>Books List</h3>
       <hr>
-        <a class="btn btn-primary btn-lg mb-3" href="add-book-form.html">
+        <a class="btn btn-primary btn-lg mb-3" href="./add-book-form.html">
           Add Book
         </a>
         <table class="table table-bordered table-striped">
@@ -26,6 +26,6 @@
           </tbody>
         </table>
     </div>
-    <script src="/public/js/books.js"></script>
+    <script src="../js/books.js"></script>   
 </body>
 </html>
