--- a/front-end/public/html/add-book-form.html
+++ b/front-end/public/html/add-book-form.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Update Book</title>
+    <title>Add Book</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
-        <h3>Update the book</h3>
+        <h3>Add a book</h3>
         <hr>
         <form id="create-book-form">
             <label for="title">Title: </label>
@@ -18,11 +18,11 @@
             <input type="text" class="form-control mb-4 w-25" id="publication" placeholder="23.01.2012 or 23/01/2012">
             <label for="authors">Authors: </label>
             <input type="text" class="form-control mb-4 w-25" id="authors" placeholder="Stephen King, Ernest Hemingway, ...">
-            <button type="button" id="update-btn" class="btn btn-info col-2">Update</button>
+            <button type="button" id="create-btn" class="btn btn-info col-2">Create</button>
         </form>
         <hr>
-        <a href="/books.html">Back to Books List</a>
+        <a href="./books.html">Back to Books List</a>
     </div>
-    <script src="/public/js/update-form.js"></script>
+    <script src="../js/books-form.js"></script>
 </body>
 </html>
